[gd_scene load_steps=6 format=3 uid="uid://cgmfngfuup8w7"]

[ext_resource type="Script" path="res://Scenes/ShopItem/shop_item.gd" id="1_ikaka"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n3o0t"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ynpn"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Theme" id="Theme_anlf2"]
Button/styles/focus = SubResource("StyleBoxFlat_n3o0t")
Button/styles/normal = SubResource("StyleBoxFlat_5ynpn")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_o1xan"]

[node name="ShopItem" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ikaka")

[node name="BuyItemSelect" type="Button" parent="."]
layout_mode = 2
offset_right = 500.0
offset_bottom = 40.0
size_flags_horizontal = 3
theme = SubResource("Theme_anlf2")

[node name="ItemIcon" type="TextureRect" parent="BuyItemSelect"]
layout_mode = 2
offset_left = 5.0
offset_right = 493.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
texture = SubResource("CompressedTexture2D_o1xan")
stretch_mode = 2

[node name="ItemName" type="Label" parent="BuyItemSelect"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
offset_left = 38.0
offset_right = 262.0
offset_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 4.0
text = "Some Mighty Sword"

[node name="Price" type="Label" parent="BuyItemSelect"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
offset_left = 61.0
offset_right = 492.0
offset_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 4.0
text = "100000"
horizontal_alignment = 2

[connection signal="pressed" from="BuyItemSelect" to="." method="_on_buy_item_select_pressed"]
